--- a/mobile_ac2/app/src/main/res/values/strings.xml
+++ b/mobile_ac2/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">mobile_ac2</string>
+    <string name="app_name">agenda</string>
+    <string name="app_user">Name</string>
+    <string name="app_senha">Password</string>
 </resources>
